add arsip feature and dashboard overview
